<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/btnR1"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="#FF9800"
        android:text="@string/btnR1"
        android:textOff="@string/txtR1Off"
        android:textOn="@string/txtR1On"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnR2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnR2"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="#4CAF50"
        android:text="@string/btnR2"
        android:textOff="@string/txtR2Off"
        android:textOn="@string/txtR2On"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnR3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnR1" />

    <ToggleButton
        android:id="@+id/btnR3"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="#2196F3"
        android:text="@string/btnR3"
        android:textOff="@string/txtR3Off"
        android:textOn="@string/txtR3On"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnR2" />

    <Button
        android:id="@+id/btnCon"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnCon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnR3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>